--- a/css/styles.css
+++ b/css/styles.css
@@ -600,17 +600,24 @@ margin-left: 16px;
     padding: 72px 24px 40px 16px;
     max-width: 320px;
     height: 640px;
+    /* width: 100%;
+    height: 100%; */
     background-color: #FFFFFF;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    overflow: auto;
     
 }
-
+.mobile-container1{
+    position: relative;
+}
 .mobile-menu-list{
  display: flex;
 flex-direction: column;
