--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ img {
 display: block;
 max-width: 100%;
 height: auto;
+width: 100%;
 }
 
 header{
@@ -418,7 +419,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 
   
-/* -------footer---------------------- */
+/* ----------------------footer---------------------- */
 .foot{
     background: #2E2F42;
     font-family: Raleway,
@@ -430,13 +431,12 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 display: flex;
 flex-direction: column;
 align-items: center;
-/* gap: 72px; */
+
 
 
 
 }
 .logo-container{
-/* margin-right: 120px; */
 display: flex;
 flex-direction: column;
 text-align: center;
@@ -453,7 +453,6 @@ font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.32px;
-    /* max-width: 264px; */
     text-align: center;
 }
 
@@ -593,15 +592,13 @@ margin-left: 16px;
 
 
 
-/* ---------mobile-menu----------------- */
+/* -----------------------mobile-menu---------------------------- */
 
 
 .mobile-menu {
-    padding: 72px 24px 40px 16px;
-    max-width: 320px;
-    height: 640px;
-    /* width: 100%;
-    height: 100%; */
+    padding: 24px 24px 40px 16px;
+    width: 100%;
+    height: 100%;
     background-color: #FFFFFF;
     position: fixed;
     top: 0;
@@ -613,7 +610,20 @@ margin-left: 16px;
     visibility: hidden;
     pointer-events: none;
     overflow: auto;
-    
+}
+.mobile-btn{
+    background-color: #E7E9FC;
+        stroke-width: 1px;
+        width: 24px;
+        height: 24px;
+        font-family: Roboto, sans-serif;
+        flex-shrink: 0;
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        margin: 0;
+        margin-left: auto;
+        display: block;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-container1{
     position: relative;
@@ -662,7 +672,7 @@ color: #404BBF;
     gap: 40px;
     margin-bottom: 0;
 }
-/* --------------modal----------++=================-------- */
+/* ------------------------------modal------------------------------------ */
 .backdrop{
     background-color: rgba(46, 47, 66, 0.40);
     position: fixed;
@@ -678,15 +688,15 @@ color: #404BBF;
 }
 .modal-window{
     position: absolute;
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 flex-shrink: 0;
 border-radius: 4px;
 background: #FCFCFC;
-padding: 72px 24px 24px 24px;
+padding: 72px 16px 24px 16px;
 margin: 0 auto;
 box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -765,7 +775,7 @@ margin: 0;
 margin-bottom: 8px;
 }
 .modal-input{
-width: 360px;
+width: 100%;
 height: 40px;
 flex-shrink: 0;
 border-radius: 4px;
@@ -810,7 +820,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.17;
 letter-spacing: 0.04em;
-width: 360px;
+width: 100%;
 height: 120px;
 flex-shrink: 0;
 border-radius: 4px;
@@ -983,10 +993,9 @@ pointer-events: auto;
      text-align: left;
  }
  .our-team-section {
-     padding-left: 108px;
-     padding-right: 108px;
  }
  .our-team-list {
+    margin: 0 auto;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
@@ -1062,6 +1071,15 @@ pointer-events: auto;
     width: 264px;
     margin-bottom: 0;
  }
+ .mobile-menu{
+    display: none;
+ }
+ .modal-window{
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+ }
+
 }
 @media screen and (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
@@ -1088,8 +1106,8 @@ padding: 0 15px 0 15px;
 .nav-list-header {
 display: flex;
 gap: 40px;
-/* position: relative; */
         }
+
     .navigation{
     display: flex;
     align-items: center;  
@@ -1216,6 +1234,15 @@ margin-bottom: 0;
     margin-right: 80px;
     margin-bottom: 0;
 }
+.mobile-menu {
+    display: none;
+}
+.modal-window{
+width: 408px;
+min-height: 584px;
+padding: 72px 24px 24px 24px;
+}
+
 }
 @media screen and (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
