--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,9 @@ width: 100%;
 .container{
 max-width: 320px;
 margin: 0 auto;
-padding: 0 16px;
-position: relative;
-  
+padding: 0 16px; 
 }
+
 .top-line{
     display: flex;
  height: 56px;
@@ -170,13 +169,7 @@ flex-shrink: 0;
 margin: 0 auto;
 }
 
-@media screen and (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .main-page {
-        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mob2x.jpg);
-    }
-}
+
 
 .main-page-title{
     color: #FFF;
@@ -266,7 +259,7 @@ background-color: #404BBF;
 /* --------our-team-section-------- */
 .our-team-section{
     background-color: #F4F4FD;
-   padding: 96px 13px;
+   padding: 96px 0;
   
 
 }
@@ -422,8 +415,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 /* ----------------------footer---------------------- */
 .foot{
     background: #2E2F42;
-    font-family: Raleway,
-        sans-serif;
     color: #F4F4FD;
     padding: 96px 0;
 }
@@ -468,6 +459,9 @@ margin-top: 0;
 p.social-media{
     text-align: center;
 }
+.social-media-container{
+    margin-bottom: 72px;
+}
 .social-media{
 margin-top: 0;
 margin-bottom: 0;
@@ -485,8 +479,7 @@ margin-bottom: 16px;
 .footer-social-links{
 display: flex;
 gap: 16px;
-justify-content: center;
-margin-bottom: 72px; 
+justify-content: center; 
 }
 
 .footer-ellipse{
@@ -646,6 +639,9 @@ gap: 40px;
 }
 .menu-item:focus{
     color: #404BBF;
+}
+.menu-item-active{
+    color: #404bbf;
 }
 .menu-contacts-list{
     display: flex;
@@ -920,6 +916,16 @@ opacity: 1;
 visibility: visible;
 pointer-events: auto;
 }
+@media screen and (min-width:320px) {
+    @media screen and (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            .main-page {
+                background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-mob2x.jpg);
+            }
+        }
+}
+
 
 /* -------media tablet-------------------- */
 
@@ -943,6 +949,11 @@ pointer-events: auto;
     display: flex;
     align-items: center;
   }
+.nav-list-header-contacts {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
 .burger-menu{
     display: none;
 }
@@ -962,7 +973,13 @@ pointer-events: auto;
     height: 436px;
 }
 
-
+@media screen and (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .main-page {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tab2x.jpg);
+    }
+}
 .main-page-title {
     max-width: 496px;
     font-size: 56px;
@@ -976,7 +993,7 @@ pointer-events: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
 }
 
 .features-item {
@@ -999,11 +1016,12 @@ pointer-events: auto;
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
-     gap: 24px;
+     justify-content: center;
+     gap: 64px 24px;
  }
 
  .our-team-item {
-     width: calc((100% - 24px) / 2);
+     width: 264px;
  }
  .our-portfolio-section {
      padding: 96px 0;
@@ -1030,7 +1048,7 @@ pointer-events: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 24px;
+    gap: 72px 24px;
  }
  .foot-text{
     text-align: left;
@@ -1038,6 +1056,7 @@ pointer-events: auto;
  .logo-container{
     width: 264px;
     text-align: left;
+    margin-bottom: 0;
  }
  .social-media-container{
     width: 208px;
@@ -1081,13 +1100,7 @@ pointer-events: auto;
  }
 
 }
-@media screen and (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .main-page {
-        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tab2x.jpg);
-    }
-}
+
 
 
 /* ----------------------media desktop-------- */
@@ -1139,6 +1152,13 @@ max-width: 1440px;
     padding: 188px 0;
     height: 600px;
     background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+}
+@media screen and (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .main-page {
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office2x.jpg);
+    }
 }
 .main-page-title{
     max-width: 496px;
@@ -1244,11 +1264,5 @@ padding: 72px 24px 24px 24px;
 }
 
 }
-@media screen and (min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .main-page {
-        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office2x.jpg);
-    }
-}
+
 
