--- a/css/styles.css
+++ b/css/styles.css
@@ -430,7 +430,6 @@ align-items: center;
 .logo-container{
 display: flex;
 flex-direction: column;
-text-align: center;
 margin-bottom: 72px;
 }
 .logo-studio-foot{
@@ -444,11 +443,11 @@ font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.32px;
-    text-align: center;
 }
 
 .logo-foot{
-display: inline-block;
+display: block;
+text-align: center;
 margin-bottom: 16px;
 }
 
@@ -1059,7 +1058,7 @@ pointer-events: auto;
     margin-bottom: 0;
  }
  .social-media-container{
-    width: 208px;
+    margin-bottom: 0;
     justify-content: left;
  }
  .footer-social-links{
@@ -1119,6 +1118,9 @@ padding: 0 15px 0 15px;
 .nav-list-header {
 display: flex;
 gap: 40px;
+        }
+        .nav-list-header-contacts{
+            flex-direction: row;
         }
 
     .navigation{
@@ -1249,6 +1251,9 @@ margin-bottom: 0;
 .logo-container{
     margin-right: 120px;
     margin-bottom: 0;
+}
+.logo-foot{
+    text-align: left;
 }
 .social-media-container{
     margin-right: 80px;
